Made a lot of changes added photos, changed text, disabled sections to make it a landing page.

--- a/translations/en.json
+++ b/translations/en.json
@@ -1,5 +1,5 @@
 {
-  "site.name": "Artisan Press",
+  "site.name": "Servigrafic Solutions",
   "nav.home": "Home",
   "nav.services": "Services",
   "nav.gallery": "Gallery",
@@ -40,7 +40,7 @@
   "cta.description": "Ready to bring your printing project to life? Contact us to discuss your ideas and discover how we can help create something extraordinary.",
   "cta.button": "Start a Project",
 
-  "services.title": "Our Services",
+  "services.title": "Nuestros Servicios",
   "services.subtitle": "Discover our range of premium printing techniques and services, each crafted with attention to detail and artistic excellence.",
 
   "gallery.title": "Our Gallery",
