--- a/translations/es.json
+++ b/translations/es.json
@@ -28,7 +28,7 @@
   "process.consultation.title": "Consulta",
   "process.consultation.description": "Comenzamos con una conversación reflexiva sobre tu visión, objetivos y preferencias. Esto nos ayuda a entender la esencia de tu proyecto y cómo podemos darle vida a través de la impresión.",
   "process.design.title": "Diseño y Concepto",
-  "process.design.description": "Nuestros diseñadores traducen tus ideas en conceptos visuales, considerando todo, desde la selección del papel hasta las técnicas de impresión. Exploramos posibilidades creativas manteniendo tus objetivos en foco.",
+  "process.design.description": "Ya sea que tengas un diseño listo o necesites ayuda para crearlo desde cero, nuestro equipo de diseño traduce tus ideas en conceptos visuales impactantes. Consideramos cada detalle, desde la selección del papel hasta las técnicas de impresión, explorando posibilidades creativas sin perder de vista tus objetivos.",
   "process.production.title": "Elaboración y Producción",
   "process.production.description": "Con los diseños aprobados, nuestros maestros impresores dan vida a tu proyecto utilizando una combinación de artesanía tradicional y técnicas modernas. Cada pieza recibe una atención meticulosa al detalle.",
 
